Intial prototype with multifile handling capability

--- a/pom.xml
+++ b/pom.xml
@@ -5,21 +5,6 @@
     <artifactId>geogaddi</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <description>Geographic data processor</description>
-    <!--
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    -->
     <dependencies>
         <dependency>
             <groupId>commons-cli</groupId>
@@ -31,8 +16,17 @@
             <artifactId>opencsv</artifactId>
             <version>2.3</version>
         </dependency>
+	    <dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+	  		<artifactId>commons-lang3</artifactId>
+	  		<version>3.3</version>
+		</dependency>
     </dependencies>
-    <!-- -->
     <build>
         <plugins>
             <plugin>
@@ -76,5 +70,4 @@
             </plugin>
         </plugins>
     </build>
-    <!-- -->
 </project>
