--- a/geogaddi.properties
+++ b/geogaddi.properties
@@ -1,15 +1,17 @@
-!-- Fetcher
-!--fetcher.source.url=ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2002.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2003.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2004.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2005.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2006.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2007.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2008.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2009.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2010.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2011.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2012.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2013.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2014.csv.gz,
-!--fetcher.source.url=ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/1763.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/1764.csv.gz
-fetcher.source.url=ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/1763.csv.gz
 !-- TODO add more compact way to loop over URL range
-fetcher.dump.dir=c:/Users/Jeff/Documents/Work/NEMAC/data/dump
+!-- TODO transform to JSON properties
+!-- TODO add S3 integration params
+
+!-- Fetcher
+!--fetcher.source.url=ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2002.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2003.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2004.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2005.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2006.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2007.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2008.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2009.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2010.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2011.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2012.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2013.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2014.csv.gz
+fetcher.source.url=ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/1763.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/1764.csv.gz
+fetcher.dump.dir=data/dump
 
 !-- Parceler
-parceler.source.csv=c:/Users/Jeff/Documents/Work/NEMAC/data/dump/1763.csv
+parceler.source.csv=data/dump/1763.csv
 parceler.parcel.whitelist.source=
 parceler.parcel.whitelist.filter.index=0
 parceler.parce.folder.index=0
 parceler.parce.file.index=2
 parceler.parce.data.index=1,3
-parceler.output.dir=c:/Users/Jeff/Documents/Work/NEMAC/data/output
+parceler.output.dir=data/output
