--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
 	  		<artifactId>commons-lang3</artifactId>
 	  		<version>3.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20140107</version>
+		</dependency>
     </dependencies>
     <build>
         <plugins>
