--- a/geogaddi.properties
+++ b/geogaddi.properties
@@ -13,3 +13,9 @@ parceler.parce.folder.index=0
 parceler.parce.file.index=2
 parceler.parce.data.index=1,3
 parceler.output.dir=data/output
+
+!-- Integrator
+integrator.s3.accesskeyid=
+integrator.s3.secretkey=
+integrator.s3.bucket.name=
+integrator.source.dir=data/output
