--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,29 @@
             <artifactId>aws-java-sdk</artifactId>
             <version>1.7.3</version>
         </dependency>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.nemac</groupId>
+            <artifactId>geogaddi</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <!--hamcrest-->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <!--gson-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.4</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -49,8 +72,8 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.2-beta-4</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <!--<source>1.7</source>-->
+                    <!--<target>1.7</target>-->
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
