added remaining properties objects; in the middle of changing the options  factory to return a instance of GeogaddiOptions

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -34,4 +34,7 @@ integrator.s3.accesskeyid=
 integrator.s3.secretkey=
 integrator.s3.bucket.name=
 
-!-- test
+!-- test# chart colors
+colors.pie = #FF0000;
+colors.pie = #00FF00;
+colors.pie = #0000FF;
