--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -12,19 +12,24 @@ fetcher.source.url=ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/1763.csv.
 fetcher.dump.dir=data/dump
 
 !-- Parceler
-parceler.enabled=true
-parceler.uncompress=false
-parceler.clean.source=false
-parceler.clean.destination=true
-parceler.parcel.whitelist.file.source=
-parceler.parcel.whitelist.file.index=2
-parceler.source.csv=data/dump/1763.csv
-parceler.parcel.whitelist.source=
-parceler.parcel.whitelist.filter.index=0
-parceler.parce.folder.index=0
-parceler.parce.file.index=2
-parceler.parce.data.index=1,3
-parceler.output.dir=data/output
+parcelerOptions.enabled=true
+parcelerOptions.uncompress=true
+parcelerOptions.cleanSource=true
+parcelerOptions.cleanDestination=true
+parcelerOptions.existingFromIntegrator=true
+parcelerOptions.sourceCSVs=data/dump/1900.csv.gz
+parcelerOptions.sourceCSVs=data/dump/1901.csv.gz
+parcelerOptions.folderWhiteList=stations.csv
+parcelerOptions.folderWhiteListIndex=0
+parcelerOptions.folderIndex=0
+parcelerOptions.fileWhiteList=vars.csv
+parcelerOptions.fileWhiteListIndex=2
+parcelerOptions.fileIndex=2
+parcelerOptions.dataIndexes=1
+parcelerOptions.dataIndexes=3
+parcelerOptions.outputDir=data/output
+
+
 
 !-- Integrator
 integrator.enabled=false
@@ -36,5 +41,5 @@ integrator.s3.bucket.name=
 
 !-- test# chart colors
 colors.pie = #FF0000;
-colors.pie = #00FF00;
-colors.pie = #0000FF;
+colors.pie2 = #00FF00;
+colors.pie3 = #0000FF;
