lastest round of updates for the TransformationFactory loader and the geogaddi static properties class

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,5 +1,3 @@
-#!-- TODO add S3 integration params
-#
 geogaddiOptions.override=true
 geogaddiOptions.quiet=false
 geogaddiOptions.useAll=true
@@ -36,7 +34,7 @@ integratorOptions.awsSecretKey=secretkey
 integratorOptions.bucketName=testbucket
 
 !-- Deriver
-deriverOptions.enabled=false
+deriverOptions.enabled=true
 deriverOptions.sourceDir=test/data/output
 
 #!-- Transformations
