--- a/geogaddi.properties
+++ b/geogaddi.properties
@@ -1,35 +1,83 @@
-!-- TODO add S3 integration params
+#override=true
+#quiet=true
+#useall=false
+#
+#!-- Fetcher
+#fetcher.enabled=true
+#fetcher.uncompress=false
+#!--fetcher.source.url=ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2002.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2003.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2004.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2005.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2006.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2007.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2008.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2009.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2010.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2011.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2012.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2013.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2014.csv.gz
+#fetcher.source.url=ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/1763.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/1764.csv.gz
+#fetcher.dump.dir=data/dump
+#
+#!-- Parceler
+#parceler.enabled=true
+#parceler.uncompress=false
+#parceler.clean.source=false
+#parceler.clean.destination=true
+#parceler.parcel.whitelist.file.source=
+#parceler.parcel.whitelist.file.index=2
+#parceler.source.csv=data/dump/1763.csv
+#parceler.parcel.whitelist.source=
+#parceler.parcel.whitelist.filter.index=0
+#parceler.parce.folder.index=0
+#parceler.parce.file.index=2
+#parceler.parce.data.index=1,3
+#parceler.output.dir=data/output
+#
+#!-- Integrator
+#integrator.enabled=false
+#integrator.clean.source=false
+#integrator.source.dir=data/output
+#integrator.s3.accesskeyid=
+#integrator.s3.secretkey=
+#integrator.s3.bucket.name=
 
-override=true
-quiet=true
-useall=false
+geogaddiOptions.override=true
+geogaddiOptions.quiet=false
+geogaddiOptions.useAll=true
+geogaddiOptions.uncompress=true
 
 !-- Fetcher
-fetcher.enabled=true
-fetcher.uncompress=false
-!--fetcher.source.url=ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2002.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2003.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2004.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2005.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2006.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2007.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2008.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2009.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2010.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2011.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2012.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2013.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/2014.csv.gz
-fetcher.source.url=ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/1763.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/1764.csv.gz
-fetcher.dump.dir=data/dump
+fetcherOptions.enabled=true
+fetcherOptions.uncompress=true
+fetcherOptions.sources=ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/1900.csv.gz,ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/1901.csv.gz
+fetcherOptions.dumpDir=data/dump
 
 !-- Parceler
-parceler.enabled=true
-parceler.uncompress=false
-parceler.clean.source=false
-parceler.clean.destination=true
-parceler.parcel.whitelist.file.source=
-parceler.parcel.whitelist.file.index=2
-parceler.source.csv=data/dump/1763.csv
-parceler.parcel.whitelist.source=
-parceler.parcel.whitelist.filter.index=0
-parceler.parce.folder.index=0
-parceler.parce.file.index=2
-parceler.parce.data.index=1,3
-parceler.output.dir=data/output
+parcelerOptions.enabled=true
+parcelerOptions.uncompress=true
+parcelerOptions.cleanSource=true
+parcelerOptions.cleanDestination=true
+parcelerOptions.existingFromIntegrator=true
+parcelerOptions.sourceCSVs=data/dump/1900.csv.gz,data/dump/1901.csv.gz
+parcelerOptions.folderWhiteList=stations.csv
+parcelerOptions.folderWhiteListIndex=0
+parcelerOptions.folderIndex=0
+parcelerOptions.fileWhiteList=vars.csv
+parcelerOptions.fileWhiteListIndex=2
+parcelerOptions.fileIndex=2
+parcelerOptions.dataIndexes=1,3
+parcelerOptions.outputDir=data/output
 
 !-- Integrator
-integrator.enabled=false
-integrator.clean.source=false
-integrator.source.dir=data/output
-integrator.s3.accesskeyid=
-integrator.s3.secretkey=
-integrator.s3.bucket.name=
+integratorOptions.enabled=true
+integratorOptions.cleanSource=true
+integratorOptions.sourceDir=data/output
+integratorOptions.awsAccessKeyId=
+integratorOptions.awsSecretKey=
+integratorOptions.bucketName=
+
+!-- Deriver
+deriverOptions.enabled=false
+deriverOptions.sourceDir=data/output
+
+#!-- Transformations
+deriverOptions.transformationOptions.name=First Transformation
+deriverOptions.transformationOptions.transformationSourceLib=C:/full/path/to/lib.jar
+deriverOptions.transformationOptions.transformation=YTDCumulative
+deriverOptions.transformationOptions.folder=transformationFolder
+deriverOptions.transformationOptions.file=PRCP
+deriverOptions.transformationOptions.normalDir=normalDir
+deriverOptions.transformationOptions.dateIndex=0
+deriverOptions.transformationOptions.dataIndex=1
+deriverOptions.transformationOptions.outName=PRCP_YTD
